# rust-csv-etna

./: .gitignore  BUGS.md  Cargo.toml  TASKS.md  etna.toml
csv-core/src/: reader.rs  writer.rs
patches/: byte_record_eq_field_boundaries_efc4a51_1.patch  byte_record_eq_length_check_23fb0cd_1.patch  core_reader_comment_only_at_record_start_a5745ba_1.patch  core_reader_reset_output_pos_zero_066de4a_1.patch  deserialize_byte_buf_bypasses_utf8_9e644e6_1.patch  reader_trim_all_without_headers_ce01ae7_1.patch  writer_comment_char_auto_quote_0f64d3f_1.patch
scripts/: validate_etna.sh
src/: byte_record.rs  deserializer.rs  etna.rs  lib.rs  reader.rs
tests/: etna_witnesses.rs
