[package]
name = "csv"
version = "1.4.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Fast CSV parsing with support for serde."
documentation = "https://docs.rs/csv"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "serde"]
license = "Unlicense/MIT"
categories = ["encoding", "parser-implementations"]
exclude = ["/.github", "/ci/*", "/scripts/*"]
edition = "2021"
rust-version = "1.73"

[workspace]
members = ["csv-core", "csv-index"]

[lib]
bench = false

[dependencies]
csv-core = { path = "csv-core", version = "0.1.11" }
itoa = "1"
ryu = "1"
serde_core = "1.0.221"
serde = { version = "1.0.221", features = ["derive"] }
serde_bytes = "0.11"
proptest = "1"
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", features = ["etna"] }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main" }
hegeltest = "0.3.7"

[dev-dependencies]
bstr = { version = "1.7.0", default-features = false, features = ["alloc", "serde"] }

[profile.release]
debug = true

[profile.bench]
debug = true
